<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="417dp"
        android:layout_height="150dp"
        android:background="@color/colorPrimary2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="84dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimary2"
        android:gravity="center"
        android:text="@string/text_garden"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/plant1"
        android:layout_width="122dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/plant1_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/_seth" />

    <ImageView
        android:id="@+id/plant2"
        android:layout_width="122dp"
        android:layout_height="100dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/plant2_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/_dakota" />

    <ImageView
        android:id="@+id/plant3"
        android:layout_width="122dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/plant3_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant1"
        app:srcCompat="@drawable/_clark" />

    <ImageView
        android:id="@+id/plant4"
        android:layout_width="122dp"
        android:layout_height="100dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/plant4_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant2"
        app:srcCompat="@drawable/_michael" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/plant1_name"
        android:textColor="@color/textGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:gravity="center_horizontal"
        android:text="@string/plant2_name"
        android:textColor="@color/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/plant3_name"
        android:textColor="@color/textGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="123dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:gravity="center_horizontal"
        android:text="@string/plant4_name"
        android:textColor="@color/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant4" />

    <Switch
        android:id="@+id/light1"
        android:layout_width="102dp"
        android:layout_height="41dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="40dp"
        android:text="@string/button_lights"
        android:textColor="@color/textGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/colorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@color/colorPrimary2"
        android:text="@string/button_lights_color"
        android:textColor="@color/textGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/light1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>