<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FirstPlant">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="417dp"
        android:layout_height="150dp"
        android:background="@color/colorPrimary2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <Button
        android:id="@+id/water1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorLightGrey"
        android:text="@string/button_water"
        android:textColor="@color/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterStat3" />

    <TextView
        android:id="@+id/healthStat"
        android:layout_width="395dp"
        android:layout_height="66dp"
        android:layout_marginTop="228dp"
        android:background="@android:color/background_light"
        android:gravity="center_vertical"
        android:text="@string/overall_health"
        android:textColor="@color/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moistureStat"
        android:layout_width="395dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:gravity="center_vertical"
        android:text="@string/moisture_status"
        android:textColor="@color/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthStat" />

    <TextView
        android:id="@+id/waterStat"
        android:layout_width="395dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:gravity="center_vertical"
        android:text="@string/water_time"
        android:textColor="@color/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moistureStat" />

    <TextView
        android:id="@+id/waterStat3"
        android:layout_width="395dp"
        android:layout_height="66dp"
        android:layout_marginTop="108dp"
        android:background="@android:color/background_light"
        android:gravity="center_vertical"
        android:text="@string/soil_temp"
        android:textColor="@color/textGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moistureStat" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/_seth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="413dp"
        android:layout_height="45dp"
        android:layout_marginTop="148dp"
        android:background="@color/colorPrimary2"
        android:gravity="center"
        android:text="@string/plant1_name"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="214dp"
        android:layout_height="29dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="21dp"
        android:max="10"
        android:min="0"
        android:saveEnabled="false"
        android:thumbTint="@color/colorAccent2"
        app:layout_constraintBottom_toBottomOf="@+id/healthStat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/healthStat"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="214dp"
        android:layout_height="29dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="12dp"
        android:max="2000"
        android:min="0"
        android:saveEnabled="false"
        android:thumbTint="@color/colorAccent2"
        app:layout_constraintBottom_toBottomOf="@+id/moistureStat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/moistureStat"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timeWatered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="27dp"
        android:text="Filler"
        android:textColor="@color/textGrey"
        app:layout_constraintBottom_toBottomOf="@+id/waterStat"
        app:layout_constraintEnd_toEndOf="@+id/waterStat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/waterStat"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/soilTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filler"
        android:textColor="@color/textGrey"
        app:layout_constraintBottom_toBottomOf="@+id/waterStat3"
        app:layout_constraintEnd_toEndOf="@+id/waterStat3"
        app:layout_constraintStart_toStartOf="@+id/waterStat3"
        app:layout_constraintTop_toTopOf="@+id/waterStat3" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--<Button-->
<!--android:id="@+id/button"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginTop="200dp"-->
<!--android:text="@string/button_water"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintHorizontal_bias="0.498"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toTopOf="parent" />-->

<!--<Switch-->
<!--android:id="@+id/lightSwitch"-->
<!--android:layout_width="195dp"-->
<!--android:layout_height="76dp"-->
<!--android:layout_marginTop="120dp"-->
<!--android:text="@string/button_lights"-->
<!--app:layout_constraintBottom_toBottomOf="parent"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toBottomOf="@+id/button"-->
<!--app:layout_constraintVertical_bias="0.109" />-->